fix scrollbar

--- a/cubedash/static/base.sass
+++ b/cubedash/static/base.sass
@@ -85,6 +85,7 @@ header
     flex: 0.4
     -ms-overflow-style: none
     flex-direction: row
+    scrollbar-width: none
 
     &::-webkit-scrollbar
       display: none
@@ -108,6 +109,7 @@ footer
     overflow-y: scroll
     -ms-overflow-style: none
     background-color: $content_background
+    scrollbar-width: none
 
     &::-webkit-scrollbar
       display: none
@@ -133,6 +135,7 @@ footer
         -ms-overflow-style: none
         height: 100%
         overflow: scroll
+        scrollbar-width: none
 
         &::-webkit-scrollbar
             display: none
